pulse number and binning info

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -105,9 +105,8 @@
     "    global pulses\n",
     "    to_read = files[f.index(ctrl_file.value)]\n",
     "    pulses = fn.read_data(to_read)\n",
-    "    plt.clf()\n",
-    "    plt.plot(fn.get_mean_profile(pulses))\n",
-    "    plt.show()\n",
+    "    ctrl_n_pulses.value = pulses.shape[0]\n",
+    "    ctrl_n_bins.value = pulses.shape[1]\n",
     "    \n",
     "ctrl_path = ipw.Text(\n",
     "    placeholder='Path to data directory',\n",
@@ -127,9 +126,33 @@
     "\n",
     ")\n",
     "\n",
+    "ctrl_n_pulses = ipw.IntText(\n",
+    "    description='Number of pulses',\n",
+    "    disabled=True,\n",
+    "    value = 0\n",
+    ")\n",
+    "\n",
+    "ctrl_n_bins = ipw.IntText(\n",
+    "    description='Binning',\n",
+    "    disabled=True,\n",
+    "    value=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# layout\n",
     "ctrl_path.observe(on_path_change, names='value')\n",
     "btn_select.on_click(read_data)\n",
-    "ipw.HBox([ctrl_path, ctrl_file, btn_select])\n"
+    "l1 = ipw.HBox([ctrl_path, ctrl_file, btn_select])\n",
+    "l2 = ipw.HBox([ctrl_n_pulses, ctrl_n_bins])\n",
+    "ipw.VBox([l1, l2])"
    ]
   }
  ],
@@ -161,13 +184,6 @@
       }
      ]
     },
-    "14ebbf68faac40ceb703a006e2303c28": {
-     "views": [
-      {
-       "cell_index": 2
-      }
-     ]
-    },
     "6c785deef8d5463a9d86e0e9dcd7f01e": {
      "views": [
       {
@@ -179,6 +195,13 @@
      "views": [
       {
        "cell_index": 1
+      }
+     ]
+    },
+    "f3f2e58f96f24b2fa85f2e5e2c85a20f": {
+     "views": [
+      {
+       "cell_index": 2
       }
      ]
     },
