pulse range selection

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -86,6 +86,23 @@
    },
    "outputs": [],
    "source": [
+    "def enable_controls():\n",
+    "    ctrl_min_pulse.disabled = False\n",
+    "    ctrl_max_pulse.disabled = False\n",
+    "    btn_plot_mean.disabled = False\n",
+    "\n",
+    "def on_max_pulse_change(value):\n",
+    "    if value['new'] < ctrl_min_pulse.value:\n",
+    "        ctrl_max_pulse.value = ctrl_min_pulse.value\n",
+    "    elif value['new'] > ctrl_n_pulses.value:\n",
+    "        ctrl_max_pulse.value = ctrl_n_pulses.value\n",
+    " \n",
+    "def on_min_pulse_change(value):\n",
+    "    if value['new'] < 1:\n",
+    "        ctrl_min_pulse.value = 1\n",
+    "    elif value['new'] > ctrl_max_pulse.value:\n",
+    "        ctrl_min_pulse.value = ctrl_max_pulse.value  \n",
+    "\n",
     "def on_path_change(value):\n",
     "    global files\n",
     "    global f\n",
@@ -107,6 +124,11 @@
     "    pulses = fn.read_data(to_read)\n",
     "    ctrl_n_pulses.value = pulses.shape[0]\n",
     "    ctrl_n_bins.value = pulses.shape[1]\n",
+    "    \n",
+    "    enable_controls()\n",
+    "    \n",
+    "    ctrl_max_pulse.value = ctrl_n_pulses.value\n",
+    "    ctrl_min_pulse.value = 1\n",
     "    \n",
     "ctrl_path = ipw.Text(\n",
     "    placeholder='Path to data directory',\n",
@@ -136,6 +158,23 @@
     "    description='Binning',\n",
     "    disabled=True,\n",
     "    value=0\n",
+    ")\n",
+    "\n",
+    "ctrl_min_pulse = ipw.IntText(\n",
+    "    description='From:',\n",
+    "    disabled=True,\n",
+    "    value=1\n",
+    ")\n",
+    "\n",
+    "ctrl_max_pulse = ipw.IntText(\n",
+    "    description='To:',\n",
+    "    disabled=True,\n",
+    "    value=1\n",
+    ")\n",
+    "\n",
+    "btn_plot_mean = ipw.Button(\n",
+    "    description='Plot mean profile',\n",
+    "    disabled=True\n",
     ")"
    ]
   },
@@ -147,12 +186,17 @@
    },
    "outputs": [],
    "source": [
-    "# layout\n",
+    "# events handling\n",
     "ctrl_path.observe(on_path_change, names='value')\n",
     "btn_select.on_click(read_data)\n",
+    "ctrl_max_pulse.observe(on_max_pulse_change, names='value')\n",
+    "ctrl_min_pulse.observe(on_min_pulse_change, names='value')\n",
+    "\n",
+    "#layout\n",
     "l1 = ipw.HBox([ctrl_path, ctrl_file, btn_select])\n",
     "l2 = ipw.HBox([ctrl_n_pulses, ctrl_n_bins])\n",
-    "ipw.VBox([l1, l2])"
+    "l3 = ipw.HBox([ctrl_min_pulse, ctrl_max_pulse, btn_plot_mean])\n",
+    "ipw.VBox([l1, l2, l3])"
    ]
   }
  ],
@@ -177,38 +221,10 @@
   },
   "widgets": {
    "state": {
-    "0c1cfec2ebfe492b9ca7304f130ccd31": {
+    "31eee4fb966f4d15a9c3846cd3eb4783": {
      "views": [
       {
-       "cell_index": 1
-      }
-     ]
-    },
-    "6c785deef8d5463a9d86e0e9dcd7f01e": {
-     "views": [
-      {
-       "cell_index": 1
-      }
-     ]
-    },
-    "739dec55c00b4a42b53ba4c44ecbf604": {
-     "views": [
-      {
-       "cell_index": 1
-      }
-     ]
-    },
-    "f3f2e58f96f24b2fa85f2e5e2c85a20f": {
-     "views": [
-      {
-       "cell_index": 2
-      }
-     ]
-    },
-    "f5757a46b8ed40588140c2c0c046d429": {
-     "views": [
-      {
-       "cell_index": 1
+       "cell_index": 3
       }
      ]
     }
